--- a/task1.Rmd
+++ b/task1.Rmd
@@ -14,9 +14,9 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r load data}
-imagem1 = read.table("image_data/imagem1.txt")
-imagem2 = read.table("image_data/imagem2.txt")
-imagem3 = read.table("image_data/imagem3.txt")
+imagem1 = read.table("imagem1.txt")
+imagem2 = read.table("imagem2.txt")
+imagem3 = read.table("imagem3.txt")
 ```
 
 # b
