--- a/task1.Rmd
+++ b/task1.Rmd
@@ -10,6 +10,7 @@ library(tidyverse)
 library(dplyr)
 library(ggplot2)
 library(patchwork)
+library(GGally)
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
@@ -66,7 +67,8 @@ p1 = imagem1 %>%
         panel.border = element_blank(),
           panel.grid.major = element_blank(),
           panel.grid.minor = element_blank(),
-        panel.background = element_rect(fill = "black"))
+        panel.background = element_rect(fill = "black"))+
+  tune::coord_obs_pred()
 
 p2 = imagem2 %>%
   filter(label!=0) %>%
@@ -78,7 +80,8 @@ p2 = imagem2 %>%
         panel.border = element_blank(),
           panel.grid.major = element_blank(),
           panel.grid.minor = element_blank(),
-        panel.background = element_rect(fill = "black"))
+        panel.background = element_rect(fill = "black"))+
+  tune::coord_obs_pred()
 
 p3 = imagem3 %>%
   filter(label!=0) %>%
@@ -90,7 +93,8 @@ p3 = imagem3 %>%
         panel.border = element_blank(),
           panel.grid.major = element_blank(),
           panel.grid.minor = element_blank(),
-        panel.background = element_rect(fill = "black"))
+        panel.background = element_rect(fill = "black"))+
+  tune::coord_obs_pred()
 
 p1+p2+p3+plot_layout(nrow = 3, ncol = 1)
 ```
@@ -98,10 +102,10 @@ p1+p2+p3+plot_layout(nrow = 3, ncol = 1)
 ## c
 
 ```{r pairwise relationship, cache=TRUE}
-library(GGally)
-imagem1 %>%
-  select(V3:V11) %>%
-  ggpairs()
+# library(GGally)
+# imagem1 %>%
+#   select(V3:V11) %>%
+#   ggpairs()
 ```
 
 ```{r corplot, cache=TRUE}
