--- a/task2.Rmd
+++ b/task2.Rmd
@@ -6,7 +6,8 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-library(lambda.r)
+library(ggplot2)
+library(tidyverse)
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
@@ -31,38 +32,67 @@ summary(imagem1$y)
 summary(imagem1$x)
 ```
 
-```{r}
+```{r include=FALSE}
 imagem1$y
 ```
 
+We first use the systematic assignment to split each image. The pattern for the split in image 1 is shown in the figure. The systematic assignment is a valid split as it ensures lower dissimilarity between folds. Among all the 12 blocks of the three images, 2 blocks are selected as the test set. As for the remaining 10 blocks, one block is used for validation and the rest for training when the number of folds $k$ is not greater than 10. If $k$ is larger than 10 (which is not a common case), after each of the 10 blocks has been used for validation, we randomly select one block to construct the additive $k-10$ folds. If $k=12$, for instance, after all the 10 blocks have been in the validation set in turn, we randomly select one block for validation and use the remaining 9 blocks for the training set and repeat this process again such that there are 12 cross validation sets in total. This paper uses 10-fold cross validation to assess the fit of models in the next section. We claim that resampling from the 10 blocks when more than 10 folds are needed generally is reasonable because the number of folds is usually between 5 and 10. [Maybe more justification later]
 
-We first use the systematic assignment to split each image. The pattern for the split with $k=4$ is shown in the figure where k is the number of folds in one image. We justify the validity of the systematic assignment as it ensures lower dissimilarity between folds. As for the $3k$ blocks of all the three images, we randomly select $2k$ folds as the training set, $\lceil 0.5k \rceil$ folds as the validation set and $\lfloor 0.5k \rfloor$ folds as the test set, which approximately yields a $4:1:1$ allocation for the three sets.
 
 Referefence: https://onlinelibrary.wiley.com/doi/full/10.1111/ecog.02881
 
 ```{r}
-systematic.split = function(image, k){
-
+systematic.split = function(image, i){
+  
+  # divide the image into 2T*2T pieces
+  T = 4
   image = image %>%
-    mutate(level.x = as.factor(cut(image$x, breaks = 2*k)),
-           level.y = as.factor(cut(image$y, breaks = 2*k)),)
-  levels(image$level.x)=as.character(1:(2*k))
-  levels(image$level.y)=as.character(1:(2*k))
+    mutate(level.x = as.factor(cut(image$x, breaks = 2*T)),
+           level.y = as.factor(cut(image$y, breaks = 2*T)),)
+  levels(image$level.x)=as.character(1:(2*T))
+  levels(image$level.y)=as.character(1:(2*T))
 
   image = image %>%
     mutate(
-      mod = (as.integer(level.x) + as.integer(level.y)) %% k) %>%
-    mutate(fold = mod+1)
+      mod = (as.integer(level.x) + as.integer(level.y)) %% T) %>%
+    mutate(fold = mod+4*i-3) 
   
-  return(image)
+  return(image %>% select(-c(level.x, level.y, mod)))
 }
 ```
 
 ```{r}
-imagem1.syst = systematic.split(imagem1, k=4)
-imagem2.syst = systematic.split(imagem2, k=4)
-imagem3.syst = systematic.split(imagem3, k=4)
+imagem1.syst = systematic.split(imagem1, i=1)
+imagem2.syst = systematic.split(imagem2, i=2)
+imagem3.syst = systematic.split(imagem3, i=3)
 
+# combine the three images
+image.syst = rbind(imagem1.syst, imagem2.syst, imagem3.syst)
+
+# show the number of data in each fold
+table(image.syst$fold)
+```
+
+```{r}
+# create the test data
+image.test = NULL
+set.seed(111111)
+
+idx.test = c()
+for (i in 1:2){
+  idx = sample(1:length(unique(image.syst$fold)), size = 1)
+  image.test = rbind(image.test, image.syst[image.syst$fold==idx, ])
+  idx.test = c(idx.test, idx)
+}
+
+# create training data
+image.train = image.syst[!(image.syst$fold %in% idx.test), ]
+
+table(image.test$fold)
+table(image.train$fold)
+```
+
+```{r}
 # plot the split of image1
 imagem1.syst %>%
   ggplot(aes(x = x, y = y, col = factor(fold)))+
