--- a/task2.Rmd
+++ b/task2.Rmd
@@ -105,48 +105,78 @@ imagem1.syst %>%
 
 # Split image 1 using buffering:
 
-The second splitting method separates the training set from the validation set and the test set by creating a buffer. The cross in the middle of the image is used as the validation set. One of the four corners is randomly selected into the test set and the remaining three corners are in the training set. Although the pixels in the buffer area are not used as either the training set or the test set, the width of the pixels can be modified such that the fraction of the unused data can be controlled. One advantage of this split over the first one is that it generates spatially separated folds and ensures that no validation data or test data abuts the training data.
+The second splitting method separates the training set from the validation set and the test set by creating a buffer. The cross in the middle of the image is used as the test set. For the remaining 12 corners in the three images, one corner is randomly selected for validation and the remaining for training. Although the pixels in the buffer area are not used as either the training set or the test set, the width of the pixels can be modified such that the fraction of the unused data can be controlled. One advantage of this split over the first one is that it generates spatially separated folds and ensures that no validation data or test data abuts the training data.
 
 Reference (buffering): https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/2041-210X.13107
 
 ```{r}
-buf.split = function(image, width){
+buf.split = function(image, width, i){
   xcut = quantile(image$x, c(4/9, 5/9, 1))
   ycut = quantile(image$y, c(4/9, 5/9, 1))
   
   image = image %>%
     mutate(
       level.x = case_when(
-        ( (x < xcut[1]-width) | (x > xcut[2]+width) ) ~ 1,
         ( x > xcut[1] & x < xcut[2]) ~ 0,
-        TRUE ~ 2),
+        ( x < xcut[1] - width ) ~ 1,
+        ( x > xcut[2] + width )  ~ 2,
+        TRUE ~ -1),
       level.y = case_when(
-        ( (y < ycut[1]-width) | (y > ycut[2]+width) ) ~ 1,
         ( y > ycut[1] & y < ycut[2]) ~ 0,
-        TRUE ~ 2
-          )
+        ( y < ycut[1] - width) ~ 1,
+        ( y > ycut[2] + width) ~ 2,
+        TRUE ~ -1)
     )
   
   image = image %>%
-    mutate(block = case_when(
+    mutate(fold = case_when(
       (level.x*level.y == 0) ~ 0,
-      (level.x*level.y == 1) ~ 1,
-      TRUE ~ 2
-    ))
-  return (image)
+      (level.x == 1 & level.y == 1) ~ 4*i-3,
+      (level.x == 2 & level.y == 1) ~ 4*i-2,
+      (level.x == 1 & level.y == 2) ~ 4*i-1,
+      (level.x == 2 & level.y == 2) ~ 4*i,
+      TRUE ~ -1)
+    )
+  return (image %>% select(-c(level.x, level.y)))
 }
 ```
 
 ```{r}
-imagem1.buf = buf.split(imagem1, width = 5)
-imagem2.buf = buf.split(imagem2, width = 5)
-imagem3.buf = buf.split(imagem3, width = 5)
+imagem1.buf = buf.split(imagem1, width = 3, i = 1)
+imagem2.buf = buf.split(imagem2, width = 3, i = 2)
+imagem3.buf = buf.split(imagem3, width = 3, i = 3)
 
+# 0: test, -1: buffer
+table(imagem1.buf$fold)
+
+table(imagem2.buf$fold)
+```
+
+```{r}
+# create the test data
+image.buf.test = rbind(imagem1.buf[imagem1.buf$fold==0,],
+                       imagem2.buf[imagem2.buf$fold==0,],
+                       imagem3.buf[imagem3.buf$fold==0,]) %>%
+  select(-fold) 
+
+# create training data
+image.buf.train = rbind(imagem1.buf[!(imagem1.buf$fold %in% c(0,-1)), ],
+                        imagem2.buf[!(imagem2.buf$fold %in% c(0,-1)), ],
+                        imagem3.buf[!(imagem3.buf$fold %in% c(0,-1)), ])
+
+table(image.buf.train$fold)
+```
+
+
+
+```{r}
 # plot the split of image1
 imagem1.buf %>%
-  ggplot(aes(x = x, y = y, col = factor(block)))+
+  mutate(fold = recode(as.factor(fold), "1"="training", "2"="training", "3"="training", "4"="training",
+                       "0" = "test", "-1"="buffer")) %>%
+  ggplot(aes(x = x, y = y, col = factor(fold)))+
   geom_point()+
-  labs(x = "x", y = "y", color = "Block")+
+  labs(x = "x", y = "y", color = "Region")+
   scale_color_brewer(palette = "Blues")+
   theme_bw()
   #scale_color_grey(start = 0.8, end = 0.2)
